# timeKpr-app

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  debug_dbus.py  debug_output.txt  docker-compose.yml  fix_timekpr_time.py  pyproject.toml  read_timekpr_data.py  run-frontend.sh  run-server.sh  stop-frontend.sh  test_timekpr_integration.py
.github/workflows/: ci.yml  security.yml
docs/: ARBEIDSFLYT.md  ARKITEKTUR.md  BEGINNER.md  CI-OG-TESTER.md  HEMMELIGHETER.md  NY-PROSJEKT-FRA-MAL.md  SIKKERHET.md  SYNK-MAL.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Dashboard.tsx  Login.tsx  Settings.tsx  Skeleton.tsx  Spinner.tsx  Toast.tsx  ToastProvider.tsx
frontend/src/context/: ThemeContext.tsx
scripts/: check.ps1  check.sh  init-git.ps1  init-git.sh  new-from-mal.ps1  new-from-mal.sh  new_from_mal.py  setup-dev.ps1  setup-dev.sh  timekpr-app.service
src/mal_prosjekt/: __init__.py  cli.py  config.py
src/timekpr_app/: __init__.py  auth.py  config.py  models.py  timekpr.py  timekpr_db.py  timekpr_file.py  timekpr_mock.py
src/timekpr_app/api/: auth.py  config.py  health.py  main.py  stats.py  stats_history.py
tests/: test_api.py  test_api_full.py  test_auth.py  test_cli.py  test_config.py  test_timekpr.py
