[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mal-prosjekt"
version = "0.1.0"
description = "Mal for nye prosjekter — bytt navn og beskrivelse når du kopierer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ditt navn" }]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.scripts]
mal-demo = "mal_prosjekt.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mal_prosjekt"]
branch = true

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["mal_prosjekt"]
