[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timekpr-app"
version = "0.1.0"
description = "Web-app for å administrere timekpr-skjermtidskontroll på delt Linux-maskin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Torgeir" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dbus-python>=1.2.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.10",
    "mypy>=1.8",
    "httpx>=0.26.0",
]

[project.scripts]
timekpr-app = "timekpr_app.api.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/timekpr_app"]
branch = true

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["timekpr_app"]
